[workspace]
resolver = "2"
members = [
    "bin/admin-panel",
    "packages/http-common",
    "packages/utils",
]

[workspace.dependencies]
tokio = "1"
clap = "4.4"
log = "0.4"
tracing-subscriber = "0.3"
serde = "1.0"
serde_json = "1.0"
env_logger = "0.11"
anyhow = "1.0.92"
parking_lot = "0.12"
poem = "3.1.3"
poem-openapi = "5.1.2"
rust-embed = "8.0"
reqwest = "0.12"
mime_guess = { version = "2.0" }
hex = "0.4"
welds = { git = "https://github.com/giangndm/welds.git", branch = "new-features" }
sqlx = "0.8"
uuid = "1.10"
chrono = "0.4"
jsonwebtoken = "9.3.0"
rand = "0.8.5"
base64 = "0.22.1"
clerk-rs = "0.4.0"
bcrypt = "0.15"
oauth2 = { version = "4.4.2" }